# irods_project_template_cpp_api_plugin

./: CMakeLists.txt
src/: plugin_factory.cpp  rc_project_template.cpp  server.cpp
